Improve README.md with comprehensive documentation, project structure, setup guide, and usage examples